--- a/src/app/myport/myport.component.html
+++ b/src/app/myport/myport.component.html
@@ -41,7 +41,7 @@
                                     
                                     <div class="col-sm-12 col-md-12 col-xs-12 icon-option mb-3">
                                         <ul class="">
-                                            <li class="ico-fb">
+                                            <!-- <li class="ico-fb">
                                                 <a href="#" title="facebook">
                                                     <img src="/assets/Images/icons/ico-pipe.png" />
                                                 </a>
@@ -50,7 +50,7 @@
                                                 <a href="#" title="line">
                                                     <img src="/assets/Images/icons/ico-download.png" />
                                                 </a>
-                                            </li>
+                                            </li> -->
                                             <li class="ico-yt">
                                                 <a title="youtube">
                                                     <img src="/assets/Images/icons/ico-print.png" (click)="print()"/>
