--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -52,7 +52,7 @@
                                         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                                             <ul class="">
-                                                <li class="ico-fb">
+                                                <!-- <li class="ico-fb">
                                                     <a href="#" title="facebook">
                                                         <img src="/assets/Images/icons/ico-pipe.png" />
                                                     </a>
@@ -61,7 +61,7 @@
                                                     <a href="#" title="line">
                                                         <img src="/assets/Images/icons/ico-download.png" />
                                                     </a>
-                                                </li>
+                                                </li> -->
                                                 <li class="ico-yt">
                                                     <a href="#" title="youtube">
                                                         <img src="/assets/Images/icons/ico-print.png" />
@@ -209,14 +209,14 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
-                                                    <span>เบอร์โทรศัพท์ ที่ทำงาน</span>
+                                                <span>เบอร์โทรศัพท์ ที่ทำงาน</span>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="input-wrapper ">
+                                                    <input id="password" name="password" maxlength="30" type="text" value="">
                                                 </div>
-                                                <div class="col-md-3">
-                                                    <div class="input-wrapper ">
-                                                        <input id="password" name="password" maxlength="30" type="text" value="">
-                                                    </div>
-                                                </div>
-<!-- 
+                                            </div>
+                                            <!-- 
                                             <div class="col-md-3">
                                                 <span>เบอร์โทรศัพท์ มือถือ</span>
                                             </div>
@@ -234,15 +234,15 @@
                                         </div> -->
 
                                         <div class="row">
-                                                <div class="col-md-3">
-                                                        <span>เบอร์โทรสาร</span>
-                                                    </div>
-        
-                                                    <div class="col-md-3">
-                                                        <div class="input-wrapper ">
-                                                            <input id="password" name="password" maxlength="30" type="text" value="">
-                                                        </div>
-                                                    </div>
+                                            <div class="col-md-3">
+                                                <span>เบอร์โทรสาร</span>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="input-wrapper ">
+                                                    <input id="password" name="password" maxlength="30" type="text" value="">
+                                                </div>
+                                            </div>
                                             <!-- <div class="col-md-3">
                                                 <span>อีเมล</span>
                                             </div>
@@ -278,7 +278,7 @@
                                         </div>
                                         <div class="row mt-3 justify-content-center">
                                             <div class="col-md-2 col-xs-6">
-                                                <button class="btn-med btn-primary" (click)="checkpage('signup1')">
+                                                <button class="btn-med btn-primary" (click)="checkpage('')"  data-toggle="modal" data-target="#disclaimer"  data-backdrop="static" data-keyboard="false">
                                                     ตกลง
                                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
 
@@ -286,7 +286,7 @@
 
                                             </div>
                                             <div class="col-md-2 col-xs-6">
-                                                <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
+                                                <button class="btn-med btn-cancel" (click)="checkpage('')">
                                                     ยกเลิก
                                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
 
@@ -363,7 +363,7 @@
                                         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                                             <ul class="">
-                                                <li class="ico-fb">
+                                                <!-- <li class="ico-fb">
                                                     <a href="#" title="facebook">
                                                         <img src="/assets/Images/icons/ico-pipe.png" />
                                                     </a>
@@ -372,7 +372,7 @@
                                                     <a href="#" title="line">
                                                         <img src="/assets/Images/icons/ico-download.png" />
                                                     </a>
-                                                </li>
+                                                </li> -->
                                                 <li class="ico-yt">
                                                     <a href="#" title="youtube">
                                                         <img src="/assets/Images/icons/ico-print.png" />
@@ -480,7 +480,7 @@
                                         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                                             <ul class="">
-                                                <li class="ico-fb">
+                                                <!-- <li class="ico-fb">
                                                     <a href="#" title="facebook">
                                                         <img src="/assets/Images/icons/ico-pipe.png" />
                                                     </a>
@@ -489,7 +489,7 @@
                                                     <a href="#" title="line">
                                                         <img src="/assets/Images/icons/ico-download.png" />
                                                     </a>
-                                                </li>
+                                                </li> -->
                                                 <li class="ico-yt">
                                                     <a href="#" title="youtube">
                                                         <img src="/assets/Images/icons/ico-print.png" />
@@ -1313,7 +1313,7 @@
                                         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                                             <ul class="">
-                                                <li class="ico-fb">
+                                                <!-- <li class="ico-fb">
                                                     <a href="#" title="sort">
                                                         <img src="/assets/Images/icons/ico-pipe.png" />
                                                     </a>
@@ -1322,7 +1322,7 @@
                                                     <a href="#" title="download">
                                                         <img src="/assets/Images/icons/ico-download.png" />
                                                     </a>
-                                                </li>
+                                                </li> -->
                                                 <li class="ico-yt">
                                                     <a href="#" title="print">
                                                         <img src="/assets/Images/icons/ico-print.png" />
@@ -1729,7 +1729,7 @@
                                         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                                             <ul class="">
-                                                <li class="ico-fb">
+                                                <!-- <li class="ico-fb">
                                                     <a href="#" title="facebook">
                                                         <img src="/assets/Images/icons/ico-pipe.png" />
                                                     </a>
@@ -1738,7 +1738,7 @@
                                                     <a href="#" title="line">
                                                         <img src="/assets/Images/icons/ico-download.png" />
                                                     </a>
-                                                </li>
+                                                </li> -->
                                                 <li class="ico-yt">
                                                     <a href="#" title="youtube">
                                                         <img src="/assets/Images/icons/ico-print.png" />
@@ -1804,14 +1804,14 @@
 
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6 offset-md-4">
-                                                <button class="btn-med btn-primary" (click)="checkpage('signup1')">
+                                                <button class="btn-med btn-primary" (click)="checkpage('')">
                                                     ตกลง
                                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
 
                                                 </button>
                                             </div>
                                             <div class="col-md-3 col-xs-6">
-                                                <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
+                                                <button class="btn-med btn-cancel" (click)="checkpage('')">
                                                     ยกเลิก
                                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
 
@@ -1876,7 +1876,7 @@
                                         <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                                             <ul class="">
-                                                <li class="ico-fb">
+                                                <!-- <li class="ico-fb">
                                                     <a href="#" title="facebook">
                                                         <img src="/assets/Images/icons/ico-pipe.png" />
                                                     </a>
@@ -1885,7 +1885,7 @@
                                                     <a href="#" title="line">
                                                         <img src="/assets/Images/icons/ico-download.png" />
                                                     </a>
-                                                </li>
+                                                </li> -->
                                                 <li class="ico-yt">
                                                     <a href="#" title="youtube">
                                                         <img src="/assets/Images/icons/ico-print.png" />
@@ -1965,5 +1965,79 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade modal-custom" tabindex="-1" role="dialog" id="disclaimer">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+          
+                      <h4 class="modal-title">ระบบความปลอดภัย OTP</h4>
+                    </div>
+                    <div class="modal-body" id="content-scroll-1">
+                        <form>
+                            <div class="row">
+                                    <div class="col-sm-12">
+                                        <p>ระบบจะส่งรหัส OTP ไปยังเบอร์โทรศัพท์มือถือ
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        <div class="input-wrapper">
+                                            <input id="email-or-tel" name="email-or-tel" maxlength="30" type="text" placeholder="085XXXXXXX" class="bg-gray">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                            <div class="btn-wrapper">
+                                                <button class="btn-med btn-blue" (click)="checkpage()">
+                                                    ส่งรหัส OTP
+                                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                                </button>
+                                            </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <p>ระบุรหัส OTP ที่ได้รับ</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="input-wrapper">
+                                            <input id="name" name="name" maxlength="30" type="text" class="bg-gray">
+                                        </div>
+                                    </div>										
+                                </div>
+                                <div class="row pb-4">
+                                    <div class="col-md-12">
+                                        <p>กรุณากดปุ่ม "Request OTP" เพื่อรับรหัสรักษาความปลอดภัย</p>
+                                    </div>
+                                </div>
+
+                                <div class="row mt-3 justify-content-center">
+                                    <div class="col-md-4">
+                                            <button class="btn-med btn-primary" (click)="checkpage('')">                                                    
+                                                        ยืนยัน
+                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>                                                    
+                                                </button>
+                                    </div>
+                                    <div class="col-md-4">
+                                            <button class="btn-med btn-cancel" (click)="checkpage('')" data-dismiss="modal">                                                    
+                                                        ยกเลิก
+                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>                                                   
+                                                </button>
+                                    </div>
+                                </div>
+                            </form>
+                      </div>
+                      <div class="modal-footer">                        
+                      </div>
+                    </div>
+                    <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+                </div>
+                <!-- /.modal -->
+              </div>
     </div>
     <app-footer></app-footer>
