--- a/src/app/rmf-ltf/rmf-ltf.component.html
+++ b/src/app/rmf-ltf/rmf-ltf.component.html
@@ -18,10 +18,10 @@
                     <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
                   </li>
                   <li>
-                    <a (click)="checkpage('certificate')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                    <a (click)="checkpage('certificate-rmf')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
                   </li>
                   <li>
-                    <a (click)="checkpage('')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                    <a (click)="checkpage('certificate-ltf')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
                   </li>
                 </ul>
                 <div class="clearfix"></div>
@@ -34,10 +34,10 @@
                   <a title="รายการขาย" (click)="checkpage('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
                 </li>
                 <li role="presentation" id="menu3">
-                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate')">หนังสือรับรองฯ RMF</a>
+                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate-rmf')">หนังสือรับรองฯ RMF</a>
                 </li>
                 <li role="presentation" id="menu4">
-                  <a title="รายการตั้งซื้อขายล่วงหน้า">หนังสือรับรองฯ LTF</a>
+                  <a title="รายการตั้งซื้อขายล่วงหน้า" (click)="checkpage('certificate-ltf')">หนังสือรับรองฯ LTF</a>
                 </li>
 
               </ul>
@@ -50,7 +50,7 @@
                     <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
-                        <li class="ico-fb">
+                        <!-- <li class="ico-fb">
                           <a href="#" title="facebook">
                             <img src="/assets/Images/icons/ico-pipe.png" />
                           </a>
@@ -59,7 +59,7 @@
                           <a href="#" title="line">
                             <img src="/assets/Images/icons/ico-download.png" />
                           </a>
-                        </li>
+                        </li> -->
                         <li class="ico-yt">
                           <a href="#" title="youtube">
                             <img src="/assets/Images/icons/ico-print.png" />
@@ -307,10 +307,23 @@
                     <p class="color-red no-margin">4. เงินลงทุนใน RMF/LTF ของผู้ถือหน่วยท่านเดียวกัน แต่อยู่ในบัญชีผู้ถือลงทุนหมายเลขอื่นกับ บลจ.กรุงศรี</p>
                   </div>
 
+                  <div class="col-md-12  mt-3">
+                      <div class="row justify-content-center">
+                        <div class="col-md-2 col-xs-6 col-sm-4">
+                          <button class="btn-med btn-primary" (click)="checkpage('signup1')">
+                            พิมพ์
+                            <i class="fa fa-angle-right" aria-hidden="true"></i>
+  
+                          </button>
+                        </div>
+                      </div>
+  
+                    </div>
+
                 </div>
 
               </div>
-              <div class="detail-footer-wrapper">
+              <!-- <div class="detail-footer-wrapper">
                 <div class="row">
                   <div class="col-md-12 text-left">
                     <h4>คำย่อ</h4>
@@ -346,13 +359,13 @@
                   </div>
                 </div>
 
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="mutual-fund-wrapper" *ngIf="page == 'certificate'">
+    <div class="mutual-fund-wrapper" *ngIf="page == 'certificate-rmf'">
       <div class="max-width-wrapper">
         <div class="row">
           <div class="col-md-12">
@@ -369,10 +382,10 @@
                         <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
                       </li>
                       <li>
-                        <a (click)="checkpage('certificate')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                        <a (click)="checkpage('certificate-rmf')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
                       </li>
                       <li>
-                        <a (click)="checkpage('')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                        <a (click)="checkpage('certificate-ltf')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
                       </li>
                     </ul>
                     <div class="clearfix"></div>
@@ -385,10 +398,10 @@
                   <a title="รายการขาย" (click)="checkpage('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
                 </li>
                 <li role="presentation" id="menu3" class="current">
-                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate')">หนังสือรับรองฯ RMF</a>
+                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate-rmf')">หนังสือรับรองฯ RMF</a>
                 </li>
                 <li role="presentation" id="menu4">
-                  <a title="รายการตั้งซื้อขายล่วงหน้า">หนังสือรับรองฯ LTF</a>
+                  <a title="รายการตั้งซื้อขายล่วงหน้า" (click)="checkpage('certificate-ltf')">หนังสือรับรองฯ LTF</a>
                 </li>
 
               </ul>
@@ -401,7 +414,7 @@
                     <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
-                        <li class="ico-fb">
+                        <!-- <li class="ico-fb">
                           <a href="#" title="facebook">
                             <img src="/assets/Images/icons/ico-pipe.png" />
                           </a>
@@ -410,7 +423,7 @@
                           <a href="#" title="line">
                             <img src="/assets/Images/icons/ico-download.png" />
                           </a>
-                        </li>
+                        </li> -->
                         <li class="ico-yt">
                           <a href="#" title="youtube">
                             <img src="/assets/Images/icons/ico-print.png" />
@@ -629,6 +642,203 @@
 
 
     </div>
+    <div class="mutual-fund-wrapper" *ngIf="page == 'certificate-ltf'">
+      <div class="max-width-wrapper">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="tabs-menu-wrapper">
+                <div class="dropdown dropdown-content">
+                    <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                      เมนูกองทุน
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a (click)="checkpage('ltf-condition-complete')" title="หน่วยลงทุน LTF ที่ครบตามเงื่อนไข">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('certificate-rmf')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('certificate-ltf')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                      </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                  </div>
+              <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
+                <li role="presentation" id="menu1">
+                  <a title="รายการซื้อ" (click)="checkpage('ltf-condition-complete')">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                </li>
+                <li role="presentation" id="menu2">
+                  <a title="รายการขาย" (click)="checkpage('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                </li>
+                <li role="presentation" id="menu3">
+                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate-rmf')">หนังสือรับรองฯ RMF</a>
+                </li>
+                <li role="presentation" id="menu4" class="current">
+                  <a title="รายการตั้งซื้อขายล่วงหน้า" (click)="checkpage('certificate-ltf')">หนังสือรับรองฯ LTF</a>
+                </li>
+
+              </ul>
+            </div>
+
+            <div class="fund-table-wrapper">
+              <div class="heading-section">
+                <div class="row">
+                  <div class="detail-head-wrapper">
+                    <div class="col-md-12 col-xs-12 icon-option mb-3">
+
+                      <ul class="">
+                        <!-- <li class="ico-fb">
+                          <a href="#" title="facebook">
+                            <img src="/assets/Images/icons/ico-pipe.png" />
+                          </a>
+                        </li>
+                        <li class="ico-line">
+                          <a href="#" title="line">
+                            <img src="/assets/Images/icons/ico-download.png" />
+                          </a>
+                        </li> -->
+                        <li class="ico-yt">
+                          <a href="#" title="youtube">
+                            <img src="/assets/Images/icons/ico-print.png" />
+                          </a>
+                        </li>
+
+                      </ul>
+                    </div>
+                    <div class="col-md-3">
+
+                      <p>เลขที่ผู้ถือหน่วยลงทุน</p>
+                      <div class="select-wrapper inline-block">
+                        <select name="ddlLink" id="ddlLink">
+                          <option value="0" selected="">9990244757</option>
+                          <option value="36">9990244757</option>
+                          <option value="29">9990244757</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <p>ชื่อผู้ถือหน่วยลงทุน</p>
+                      <span>เนติวัฒน์ โชติกร</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="detail-body-wrapper">
+                <div class="row">
+                  <div class="col-md-6 pull-md-6">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="custom-radio-between">
+                          <input value="101" id="101" name="rad1" type="radio" checked>
+                          <label for="101"></label>
+                          <p>หนังสือรับรองฯ LTF</p>
+                        </div>
+                        <div class="row">
+                          <div class="col-md-12">
+                            <p>ปี</p>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="select-wrapper inline-block">
+                              <select name="ddlLink" id="ddlLink">
+                                <option value="0" selected="">2561</option>
+                                <option value="36">2560</option>
+                                <option value="29">2559</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-md-6 offset-6 mb-md-0 mb-3">
+                            <button class="btn-med btn-primary" (click)="checkpage('signup1')">
+                              ตกลง
+                              <i class="fa fa-angle-right" aria-hidden="true"></i>
+
+                            </button>
+                          </div>
+                        </div>
+
+                      </div>
+                      <div class="col-md-6">
+                        <div class="custom-radio-between">
+                          <input value="102" id="102" name="rad1" type="radio">
+                          <label for="102"></label>
+                          <p>หนังสือรับรองฯ ขายคืน LTF</p>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+              <div class="detail-footer-wrapper">
+                <div class="sidenav-left">
+                  <div class="vertical-menu-wrapper">
+                    <h3>
+                      หนังสือรับรองฯ LTF
+                    </h3>
+                    <ul>
+                      <li>
+                        <div class="row">
+                          <div class="col-md-10 col-xs-9">
+                            <a href="#" title="ชื่อเมนู">
+                              (ชื่อ) หนังสือรับรองฯ LTF
+                            </a>
+                          </div>
+                          <div class="col-md-2 col-xs-3">
+                            <button class="btn-sm btn-download width50 " (click)="checkpage('signup1')">
+                              <p>Download</p>
+                              <img src="/assets/Images/icons/ico-download-white.png">
+                            </button>
+                          </div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="row">
+                          <div class="col-md-10 col-xs-9">
+                            <a href="#" title="ชื่อเมนู">
+                              (ชื่อ) หนังสือรับรองฯ LTF
+                            </a>
+                          </div>
+                          <div class="col-md-2 col-xs-3">
+                            <button class="btn-sm btn-download width50 " (click)="checkpage('signup1')">
+                              <p>Download</p>
+                              <img src="/assets/Images/icons/ico-download-white.png">
+                            </button>
+                          </div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="row">
+                          <div class="col-md-10 col-xs-9">
+                            <a href="#" title="ชื่อเมนู">
+                              (ชื่อ) หนังสือรับรองฯ LTF
+                            </a>
+                          </div>
+                          <div class="col-md-2 col-xs-3">
+                            <button class="btn-sm btn-download width50 " (click)="checkpage('signup1')">
+                              <p>Download</p>
+                              <img src="/assets/Images/icons/ico-download-white.png">
+                            </button>
+                          </div>
+                        </div>
+                      </li>
+
+                    </ul>
+                    <div class="clearfix"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
     <div class="mutual-fund-wrapper" *ngIf="page == 'ltf-condition-complete'">
       <div class="max-width-wrapper">
         <div class="row">
@@ -646,10 +856,10 @@
                         <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
                       </li>
                       <li>
-                        <a (click)="checkpage('certificate')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                        <a (click)="checkpage('certificate-rmf')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
                       </li>
                       <li>
-                        <a (click)="checkpage('')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                        <a (click)="checkpage('certificate-ltf')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
                       </li>
                     </ul>
                     <div class="clearfix"></div>
@@ -662,10 +872,10 @@
                   <a title="รายการขาย" (click)="checkpage('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
                 </li>
                 <li role="presentation" id="menu3">
-                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate')">หนังสือรับรองฯ RMF</a>
+                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate-rmf')">หนังสือรับรองฯ RMF</a>
                 </li>
                 <li role="presentation" id="menu4">
-                  <a title="รายการตั้งซื้อขายล่วงหน้า">หนังสือรับรองฯ LTF</a>
+                  <a title="รายการตั้งซื้อขายล่วงหน้า" (click)="checkpage('certificate-ltf')">หนังสือรับรองฯ LTF</a>
                 </li>
 
               </ul>
@@ -678,7 +888,7 @@
                     <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
-                        <li class="ico-fb">
+                        <!-- <li class="ico-fb">
                           <a href="#" title="facebook">
                             <img src="/assets/Images/icons/ico-pipe.png" />
                           </a>
@@ -687,7 +897,7 @@
                           <a href="#" title="line">
                             <img src="/assets/Images/icons/ico-download.png" />
                           </a>
-                        </li>
+                        </li> -->
                         <li class="ico-yt">
                           <a href="#" title="youtube">
                             <img src="/assets/Images/icons/ico-print.png" />
