--- a/src/assets/Content/default/sass/content/myport.scss
+++ b/src/assets/Content/default/sass/content/myport.scss
@@ -977,13 +977,16 @@ background-color: $color-secondary;
             display: inline-block;
             margin-right: 10px;
         }
+        p{
+            margin-bottom: 1.5rem;
+        }
     }
     .detail-footer-wrapper{
         position: relative;
         max-width: 100%;
         padding: 30px;
         margin: 0 auto;
-        border-bottom: 5px solid #f5f5f5;
+        // border-bottom: 5px solid #f5f5f5;
         width: 100%;
         h4{
             line-height: 0px;
@@ -993,10 +996,7 @@ background-color: $color-secondary;
             }
         }
     }
-    .bg-gray{
-        background-color: #f5f5f5;
-        color: $color-primary;
-    }
+    
 
     .fund-table-wrapper {
        
