--- a/src/assets/Content/default/sass/layout/_layout-default.scss
+++ b/src/assets/Content/default/sass/layout/_layout-default.scss
@@ -2556,7 +2556,7 @@
                 .modal-title {
                     float: left;
                     max-width: 90%;
-                    color: $color-white;
+                    color: $color-hover;
                     font-family: $default-font;
                     font-size: $text-large;
                     line-height: $text-large;
@@ -2573,7 +2573,12 @@
                     /*font-family: $default-font;*/
                     font-size: unset;
                     line-height: unset;
+                    opacity: 1;
                     cursor: pointer;
+                    position: absolute;
+                    top:-78px;
+                    right:0px;
+                    background-color: $color-red;
 
                     span {
                         font-size: unset;
